temporary fix to whitespacing on transporation images

--- a/public/styles/sidebar.css
+++ b/public/styles/sidebar.css
@@ -55,6 +55,9 @@
 
 #transportation-imgs-row img{
   background-color: white;
+  padding: 30px;
+  height: 4.56rem;
+  width: 4.56rem;
 }
 
 .copy{
